--- a/TBOXSUPPORT/index.html
+++ b/TBOXSUPPORT/index.html
@@ -24,8 +24,8 @@
         <div class="section-title no-line">MENÚ</div>
         <a href="index.html" class="sidebar-link active"><i class="fas fa-chart-pie"></i><span>Dashboard</span></a>
         <a href="pages/tickets.html" class="sidebar-link"><i class="fas fa-ticket-alt"></i><span>Tickets</span></a>
-        <a href="#" class="sidebar-link"><i class="fas fa-history"></i><span>Historial</span></a>
-        <a href="#" class="sidebar-link"><i class="fas fa-plus-circle"></i><span>Asignar Ticket</span></a>
+        <a href="pages/historial.html" class="sidebar-link"><i class="fas fa-history"></i><span>Historial</span></a>
+        <a href="pages/asignar-ticket.html" class="sidebar-link"><i class="fas fa-plus-circle"></i><span>Asignar Ticket</span></a>
 
         <div class="section-title">SEGUIMIENTO</div>
         <a href="#" class="sidebar-link"><i class="fas fa-user"></i><span>Usuarios</span></a>
